--- a/express/package.json
+++ b/express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kai-express-v8",
+  "name": "kai-express-v9",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "uuid": "^9.0.0",
-    "web3": "^1.9.0"
+    "web3": "^1.9.0",
+    "axios": "^1.3.5"
   }
 }
