--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,4 @@
-# soozookaizokuhunter/frontend/Dockerfile
-
-# Build stage
+# 1) 建置階段
 FROM node:18 AS builder
 WORKDIR /app
 COPY package*.json ./
@@ -8,9 +6,11 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Production stage
+# 2) 部署階段 (Nginx)
 FROM nginx:alpine
 COPY --from=builder /app/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# 若有自訂 Nginx 配置，可加：
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
