--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,5 @@
 worker_processes auto;
+
 events {
     worker_connections 1024;
 }
@@ -6,45 +7,48 @@ events {
 http {
     sendfile on;
     keepalive_timeout 65;
-    
-    # ------------------------------------------------
-    # 1) 先處理 http(80) => 301 重導到 https
-    # ------------------------------------------------
+
+    # =======================
+    # 1) HTTP => HTTPS 301
+    # =======================
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
-    # ------------------------------------------------
-    # 2) https server
-    # ------------------------------------------------
+    # =======================
+    # 2) HTTPS
+    # =======================
     server {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # 這裡套用 Let's Encrypt 簽發的 SSL 憑證
-        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        # Let's Encrypt SSL 憑證
+        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
         ssl_prefer_server_ciphers off;
 
-        # ------------------------------------------------
-        # 前端 React (port 80 in container)
-        # ------------------------------------------------
+        # -----------------------
+        # 前端 React
+        # -----------------------
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # SPA: react-scripts build => index.html
+            try_files $uri $uri/ /index.html;
         }
 
-        # ------------------------------------------------
+        # -----------------------
         # Express => /api/
-        # ------------------------------------------------
+        # -----------------------
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
@@ -52,22 +56,25 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # ------------------------------------------------
+        # -----------------------
         # FastAPI => /fastapi/
-        # ------------------------------------------------
+        # -----------------------
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # ------------------------------------------------
+        # -----------------------
         # Crawler => /crawler/
-        # ------------------------------------------------
+        # [重點] => host:port = crawler:8081
+        # -----------------------
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
     }
 }
