--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,4 @@
 worker_processes auto;
-
 events {
     worker_connections 1024;
 }
@@ -8,73 +7,46 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # =======================
-    # 1) HTTP => HTTPS 301
-    # =======================
+    # 强制 HTTP → HTTPS (port 80 => 443)
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
-    # =======================
-    # 2) HTTPS
-    # =======================
     server {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # Let's Encrypt SSL 憑證
-        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-        ssl_prefer_server_ciphers off;
-
-        # -----------------------
-        # 前端 React
-        # -----------------------
+        # FRONTEND: React
         location / {
-            proxy_pass http://frontend:80;
+            proxy_pass http://frontend:80;  # 這裡要對應 "frontend" service, Dockerfile expose 80 or 3001
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # SPA: react-scripts build => index.html
-            try_files $uri $uri/ /index.html;
         }
 
-        # -----------------------
-        # Express => /api/
-        # -----------------------
+        # EXPRESS => /api/
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://express:3000;
+            proxy_pass http://express:3000;  # docker-compose service name=express, port=3000
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # -----------------------
-        # FastAPI => /fastapi/
-        # -----------------------
+        # FASTAPI => /fastapi/
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
-            proxy_pass http://fastapi:8000;
+            proxy_pass http://fastapi:8000;  # service=fastapi
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # -----------------------
-        # Crawler => /crawler/
-        # [重點] => host:port = crawler:8081
-        # -----------------------
+        # CRAWLER => /crawler/
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;
+            proxy_pass http://crawler:8081;   # service=crawler, port=8081
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
     }
 }
