--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,45 +7,52 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # 强制 HTTP → HTTPS (port 80 => 443)
+    # -------------------------
+    # 1) http => 301 => https
+    # -------------------------
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
+    # -------------------------
+    # 2) https server
+    # -------------------------
     server {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # FRONTEND: React
+        # FRONTEND: 代理到 "frontend" container, port=80 (如果 Dockerfile multi-stage build => 
+        #   FROM node:18 as builder -> npm run build -> FROM nginx -> EXPOSE 80)
         location / {
-            proxy_pass http://frontend:80;  # 這裡要對應 "frontend" service, Dockerfile expose 80 or 3001
+            proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # EXPRESS => /api/
+        # EXPRESS: => /api/
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://express:3000;  # docker-compose service name=express, port=3000
+            proxy_pass http://express:3000;
             proxy_set_header Host $host;
         }
 
         # FASTAPI => /fastapi/
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
-            proxy_pass http://fastapi:8000;  # service=fastapi
+            proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
         }
 
         # CRAWLER => /crawler/
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;   # service=crawler, port=8081
+            proxy_pass http://crawler:8081;
             proxy_set_header Host $host;
         }
     }
