--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# 1) 建置階段
+# frontend/Dockerfile
 FROM node:18 AS builder
 WORKDIR /app
 COPY package*.json ./
@@ -6,11 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# 2) 部署階段 (Nginx)
 FROM nginx:alpine
 COPY --from=builder /app/build /usr/share/nginx/html
-# 若有自訂 Nginx 配置，可加：
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
-
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx","-g","daemon off;"]
