--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,5 +1,4 @@
-# soozookaizokuhunter/crawler/Dockerfile
-
+# crawler/Dockerfile
 FROM node:18
 
 WORKDIR /app
@@ -8,9 +7,9 @@ RUN npm install
 
 COPY index.js ./
 
-# 安裝 chromium + 字型
+# Puppeteer 需要 chromium
 RUN apt-get update && apt-get install -y chromium \
     fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf
 
 EXPOSE 8081
-CMD ["node", "index.js"]
+CMD ["node","index.js"]
