--- a/crawler/package.json
+++ b/crawler/package.json
@@ -8,6 +8,7 @@
     "puppeteer": "^19.7.5",
     "express": "^4.18.2",
     "body-parser": "^1.20.1",
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3"       // ← 新增 dotenv，解決 "Cannot find module 'dotenv'"
   }
 }
