--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,11 +23,15 @@ http {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        # SSL 憑證路徑
+        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # FRONTEND: 代理到 "frontend" container, port=80 (如果 Dockerfile multi-stage build => 
-        #   FROM node:18 as builder -> npm run build -> FROM nginx -> EXPOSE 80)
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+        ssl_prefer_server_ciphers off;
+
+        # FRONTEND => http://frontend:80
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
@@ -35,7 +39,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # EXPRESS: => /api/
+        # EXPRESS => /api/
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
@@ -52,7 +56,7 @@ http {
         # CRAWLER => /crawler/
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;
+            proxy_pass http://crawler:8081;  # service name=crawler, container port=8081
             proxy_set_header Host $host;
         }
     }
