--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-
 services:
   db:
     image: postgres:15
@@ -13,11 +11,6 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - suzoo_net
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   geth:
     build: ./geth
@@ -47,12 +40,9 @@ services:
     build: ./express
     container_name: suzoo_express
     depends_on:
-      db:
-        condition: service_healthy
-      geth:
-        condition: service_started
-      ipfs:
-        condition: service_started
+      - db
+      - geth
+      - ipfs
     env_file:
       - .env
     networks:
@@ -62,12 +52,9 @@ services:
     build: ./fastapi
     container_name: suzoo_fastapi
     depends_on:
-      db:
-        condition: service_healthy
-      geth:
-        condition: service_started
-      ipfs:
-        condition: service_started
+      - db
+      - geth
+      - ipfs
     env_file:
       - .env
     networks:
@@ -76,6 +63,8 @@ services:
   crawler:
     build: ./crawler
     container_name: suzoo_crawler
+    # depends_on:  # 可視情況，不一定要
+    #   - express
     env_file:
       - .env
     networks:
@@ -103,7 +92,7 @@ services:
     networks:
       - suzoo_net
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro  # SSL
+      - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
 
 volumes:
