--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "kai-crawler-v8",
+  "name": "kai-crawler-fixed",
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "puppeteer": "^19.7.5",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.1",
     "axios": "^1.3.5",
-    "dotenv": "^16.0.3"       // ← 新增 dotenv，解決 "Cannot find module 'dotenv'"
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "puppeteer": "^19.7.5"
   }
 }
