--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,56 +7,47 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # -------------------------
-    # 1) http => 301 => https
-    # -------------------------
+    # http => https
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
-    # -------------------------
-    # 2) https server
-    # -------------------------
     server {
+        # 如果想去警告可改 listen 443 ssl; + http2 on;
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # SSL 憑證路徑
         ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-        ssl_prefer_server_ciphers off;
-
-        # FRONTEND => http://frontend:80
+        # 前端
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # EXPRESS => /api/
+        # Express => /api/
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
             proxy_set_header Host $host;
         }
 
-        # FASTAPI => /fastapi/
+        # FastAPI => /fastapi/
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
         }
 
-        # CRAWLER => /crawler/
+        # Crawler => /crawler/
+        # 重點：upstream crawler:8081 => Docker DNS "crawler"
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;  # service name=crawler, container port=8081
+            proxy_pass http://crawler:8081;
             proxy_set_header Host $host;
         }
     }
