--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,38 +15,37 @@ http {
     }
 
     server {
-        # 如果想去警告可改 listen 443 ssl; + http2 on;
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
         ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # 前端
+        # FRONTEND => container "frontend", port 80
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Express => /api/
+        # EXPRESS => /api/
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
             proxy_set_header Host $host;
         }
 
-        # FastAPI => /fastapi/
+        # FASTAPI => /fastapi/
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
         }
 
-        # Crawler => /crawler/
-        # 重點：upstream crawler:8081 => Docker DNS "crawler"
+        # CRAWLER => /crawler/
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
+            # 確保 proxy_pass 指到 crawler service
             proxy_pass http://crawler:8081;
             proxy_set_header Host $host;
         }
