--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+# nginx/nginx.conf
 worker_processes auto;
 events {
     worker_connections 1024;
@@ -7,45 +8,45 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # http => https
+    # 通常 80 轉 443
     server {
         listen 80;
-        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+        server_name yourdomain.com www.yourdomain.com;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl http2;
-        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+        server_name yourdomain.com www.yourdomain.com;
 
-        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+        # 你的 Let's Encrypt SSL 憑證路徑
+        ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
 
-        # FRONTEND => container "frontend", port 80
+        # FRONTEND: / => 前端服務 (port 80 in container)
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # EXPRESS => /api/
+        # EXPRESS: /api/ => express:3000
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
             proxy_set_header Host $host;
         }
 
-        # FASTAPI => /fastapi/
+        # FASTAPI: /fastapi/ => fastapi:8000
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
         }
 
-        # CRAWLER => /crawler/
+        # CRAWLER: /crawler/ => crawler:8081
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
-            # 確保 proxy_pass 指到 crawler service
             proxy_pass http://crawler:8081;
             proxy_set_header Host $host;
         }
