--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-# 若你原本有 version: '3.8' 可以保留，官方也說可以忽略 warning
 services:
   db:
     image: postgres:15
@@ -13,14 +11,12 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - suzoo_net
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    ports:
+      - "5432:5432"
 
   geth:
     build: ./geth
+    container_name: suzoo_geth
     networks:
       - suzoo_net
     ports:
@@ -32,6 +28,7 @@ services:
 
   ipfs:
     build: ./ipfs
+    container_name: suzoo_ipfs
     networks:
       - suzoo_net
     ports:
@@ -40,87 +37,58 @@ services:
       - "8080:8080"
     volumes:
       - ipfs_data:/data/ipfs
-    healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:5001/api/v0/version || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
   express:
     build: ./express
-    networks:
-      - suzoo_net
+    container_name: suzoo_express
     env_file:
       - .env
     depends_on:
-      db:
-        condition: service_healthy
-      geth:
-        condition: service_started
-      ipfs:
-        condition: service_started
-    healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:3000/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - db
+      - geth
+      - ipfs
+    networks:
+      - suzoo_net
     ports:
       - "3000:3000"
 
   fastapi:
     build: ./fastapi
-    networks:
-      - suzoo_net
+    container_name: suzoo_fastapi
     env_file:
       - .env
     depends_on:
-      db:
-        condition: service_healthy
-      geth:
-        condition: service_started
-      ipfs:
-        condition: service_started
-    healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:8000/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      - db
+      - geth
+      - ipfs
+    networks:
+      - suzoo_net
     ports:
       - "8000:8000"
 
   crawler:
     build: ./crawler
-    # 特別注意：不要再加 container_name，讓 Docker 自動分配
-    networks:
-      - suzoo_net
+    container_name: suzoo_crawler
     env_file:
       - .env
-    healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:8081/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    networks:
+      - suzoo_net
     ports:
       - "8081:8081"
 
   frontend:
     build: ./frontend
-    networks:
-      - suzoo_net
+    container_name: suzoo_frontend
     env_file:
       - .env
-    healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    ports:
-      - "3001:80"
-
-  nginx:
-    build: ./nginx
     networks:
       - suzoo_net
+    ports:
+      - "3001:80"   # 將前端容器80 port對外映射為3001 (純範例)
+  
+  nginx:
+    build: ./nginx
+    container_name: suzoo_nginx
     depends_on:
       - frontend
       - express
@@ -129,6 +97,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      - suzoo_net
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
