--- a/express/package.json
+++ b/express/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "kai-express-v9",
+  "name": "kai-express",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "crypto": "1.0.1",
-    "nodemailer": "^6.9.1",
-    "jsonwebtoken": "^8.5.1",
-    "sequelize": "^6.29.3",
-    "pg": "^8.9.0",
+    "axios": "^1.3.5",
     "cloudinary": "^1.32.0",
-    "bcrypt": "^5.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "pg": "^8.8.0",
+    "sequelize": "^6.28.0",
     "uuid": "^9.0.0",
-    "web3": "^1.9.0",
-    "axios": "^1.3.5"
+    "web3": "^1.8.2",
+    "ffmpeg-static": "^4.4.0", 
+    "fluent-ffmpeg": "^2.1.2",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
