--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "suzookaizokuhunter-frontend-v9",
+  "name": "kai-frontend",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "dependencies": {
-    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^5.3.4"
   }
 }
