--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
+version: '3.8'
+
 services:
+  # 1. PostgreSQL
   db:
     image: postgres:15
     container_name: suzoo_db
@@ -11,9 +14,13 @@ services:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - suzoo_net
-    ports:
-      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL","pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
+  # 2. geth (私有鏈)
   geth:
     build: ./geth
     container_name: suzoo_geth
@@ -26,6 +33,7 @@ services:
     volumes:
       - geth_data:/root/.ethereum
 
+  # 3. ipfs
   ipfs:
     build: ./ipfs
     container_name: suzoo_ipfs
@@ -38,34 +46,48 @@ services:
     volumes:
       - ipfs_data:/data/ipfs
 
+  # 4. express (Node.js)
   express:
     build: ./express
     container_name: suzoo_express
     env_file:
       - .env
     depends_on:
-      - db
-      - geth
-      - ipfs
+      db:
+        condition: service_healthy
+      geth:
+        condition: service_started
+      ipfs:
+        condition: service_started
     networks:
       - suzoo_net
     ports:
-      - "3000:3000"
+      - "3000:3000"  # 可保留以便debug
 
+  # 5. fastapi (Python)
   fastapi:
     build: ./fastapi
     container_name: suzoo_fastapi
     env_file:
       - .env
     depends_on:
-      - db
-      - geth
-      - ipfs
+      db:
+        condition: service_healthy
+      geth:
+        condition: service_started
+      ipfs:
+        condition: service_started
     networks:
       - suzoo_net
     ports:
       - "8000:8000"
+    healthcheck:
+      test: ["CMD-SHELL","curl -sf http://localhost:8000/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
+  # 6. crawler
   crawler:
     build: ./crawler
     container_name: suzoo_crawler
@@ -76,6 +98,7 @@ services:
     ports:
       - "8081:8081"
 
+  # 7. frontend (React)
   frontend:
     build: ./frontend
     container_name: suzoo_frontend
@@ -84,8 +107,9 @@ services:
     networks:
       - suzoo_net
     ports:
-      - "3001:80"   # 將前端容器80 port對外映射為3001 (純範例)
-  
+      - "3001:80"
+
+  # 8. nginx (Docker容器內使用 SSL)
   nginx:
     build: ./nginx
     container_name: suzoo_nginx
@@ -99,9 +123,9 @@ services:
       - "443:443"
     networks:
       - suzoo_net
+    # 挂載宿主機 Let's Encrypt 憑證到容器:ro
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
 
 volumes:
   db_data:
