--- a/express/package.json
+++ b/express/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "kai-express",
+  "name": "express-kai-v9",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "pg": "^8.8.0",
-    "sequelize": "^6.28.0",
+    "pg": "^8.9.0",
+    "sequelize": "^6.29.3",
     "uuid": "^9.0.0",
-    "web3": "^1.8.2",
-    "ffmpeg-static": "^4.4.0", 
-    "fluent-ffmpeg": "^2.1.2",
-    "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.0"
+    "web3": "^1.9.0"
   }
 }
