--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "kai-crawler",
+  "name": "kai-crawler-v9",
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
+    "puppeteer": "^19.7.5",
     "express": "^4.18.2",
-    "puppeteer": "^19.7.5"
+    "body-parser": "^1.20.1",
+    "axios": "^1.3.5"
   }
 }
