--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ CLOUDINARY_API_KEY=559164261664744
 CLOUDINARY_API_SECRET=CBLyksZYM6udCSY2-Jhv3a4E5dI
 
 ##################################
-# DMCA 自動寄信
+# DMCA 自動寄信開關
 ##################################
 DMCA_AUTO_NOTIFY=true
 
@@ -41,7 +41,7 @@ BLOCKCHAIN_PRIVATE_KEY=0x111122223333444455556666777788889999aaaabbbbccccddddeee
 CONTRACT_ADDRESS=0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8
 
 ##################################
-# FastAPI 自動部署合約
+# FastAPI 自動部署合約 (若要)
 ##################################
 DEPLOY_CONTRACT_ON_START=true
 
@@ -50,3 +50,9 @@ DEPLOY_CONTRACT_ON_START=true
 ##################################
 IPFS_HOST=ipfs
 IPFS_PORT=5001
+
+##################################
+# API 金鑰 (Google / RapidAPI)
+##################################
+GOOGLE_DRIVE_API_KEY=AIzaSyA...
+RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
