--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # 1. PostgreSQL
+  # 1) PostgreSQL
   db:
     image: postgres:15
     container_name: suzoo_db
@@ -15,12 +15,12 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL","pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # 2. geth (私有鏈)
+  # 2) 以太坊私有鏈 (Geth)
   geth:
     build: ./geth
     container_name: suzoo_geth
@@ -33,7 +33,7 @@ services:
     volumes:
       - geth_data:/root/.ethereum
 
-  # 3. ipfs
+  # 3) IPFS
   ipfs:
     build: ./ipfs
     container_name: suzoo_ipfs
@@ -46,12 +46,10 @@ services:
     volumes:
       - ipfs_data:/data/ipfs
 
-  # 4. express (Node.js)
+  # 4) Express
   express:
     build: ./express
     container_name: suzoo_express
-    env_file:
-      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -59,17 +57,17 @@ services:
         condition: service_started
       ipfs:
         condition: service_started
+    env_file:
+      - .env
     networks:
       - suzoo_net
     ports:
-      - "3000:3000"  # 可保留以便debug
+      - "3000:3000"
 
-  # 5. fastapi (Python)
+  # 5) FastAPI
   fastapi:
     build: ./fastapi
     container_name: suzoo_fastapi
-    env_file:
-      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -77,17 +75,19 @@ services:
         condition: service_started
       ipfs:
         condition: service_started
+    env_file:
+      - .env
     networks:
       - suzoo_net
     ports:
       - "8000:8000"
     healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:8000/health || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  # 6. crawler
+  # 6) Crawler
   crawler:
     build: ./crawler
     container_name: suzoo_crawler
@@ -98,7 +98,7 @@ services:
     ports:
       - "8081:8081"
 
-  # 7. frontend (React)
+  # 7) Frontend
   frontend:
     build: ./frontend
     container_name: suzoo_frontend
@@ -106,10 +106,10 @@ services:
       - .env
     networks:
       - suzoo_net
-    ports:
-      - "3001:80"
+    # React Dev Server 沒特別需求可關port
+    # 若要預覽可用: "3001:80"
 
-  # 8. nginx (Docker容器內使用 SSL)
+  # 8) Nginx (reverse-proxy + SSL)
   nginx:
     build: ./nginx
     container_name: suzoo_nginx
@@ -118,14 +118,13 @@ services:
       - express
       - fastapi
       - crawler
+    networks:
+      - suzoo_net
     ports:
       - "80:80"
       - "443:443"
-    networks:
-      - suzoo_net
-    # 挂載宿主機 Let's Encrypt 憑證到容器:ro
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro  # SSL 憑證掛載(若需要SSL)
 
 volumes:
   db_data:
