--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# build
+# frontend/Dockerfile
 FROM node:18 as builder
 WORKDIR /app
 COPY package*.json ./
@@ -6,7 +6,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# production
 FROM nginx:alpine
 COPY --from=builder /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
