--- a/.env
+++ b/.env
@@ -25,6 +25,7 @@ EMAIL_FROM="Kaishield Support <no-reply@kaishield.com>"
 # Cloudinary
 ##################################
 CLOUDINARY_CLOUD_NAME=dhjoabbkj
+CLOUDINARY_CLOUD_API_KEY=559164261664744
 CLOUDINARY_API_KEY=559164261664744
 CLOUDINARY_API_SECRET=CBLyksZYM6udCSY2-Jhv3a4E5dI
 
@@ -52,7 +53,7 @@ IPFS_HOST=ipfs
 IPFS_PORT=5001
 
 ##################################
-# API 金鑰 (Google / RapidAPI)
+# API Key (Google / RapidAPI)
 ##################################
 GOOGLE_DRIVE_API_KEY=AIzaSyA...
 RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
