--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # HTTP => HTTPS
+    # 將 HTTP => HTTPS
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
@@ -18,24 +18,29 @@ http {
         listen 443 ssl;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
+        # 將根路徑 "/"
+        # 直接反向代理到前端容器 (frontend:80)
+        # 由「前端容器」自行處理 React Fallback(/index.html)
         location / {
             proxy_pass http://frontend:80;
-            try_files $uri $uri/ /index.html;
         }
 
+        # Express
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
         }
 
+        # FastAPI
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
         }
 
+        # Crawler
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
